Add clinics index api/reducer

--- a/app/assets/stylesheets/api/appointments.scss
+++ b/app/assets/stylesheets/api/appointments.scss
@@ -9,6 +9,13 @@
 }
 
 .reason-item {
+    margin: 5px;
     height: 104px;
     width: 453px;
+    border: 1px solid grey;
+    box-shadow: 0 4px 2px -2px gray;
+}
+
+.margin-twenty-one {
+    margin: 21px;
 }
