--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,14 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
 
-@import './clear.scss'
+@import './clear.scss';
+@import './api/users.scss';
+@import './api/navbar.scss';
+@import './api/welcome.scss';
+@import './api/appointments.scss';
 
 
 
