--- a/app/assets/stylesheets/clear.scss
+++ b/app/assets/stylesheets/clear.scss
@@ -83,6 +83,15 @@
   padding: 20px;
 }
 
+.sidebar-item {
+  padding: 15px;
+}
+
 .blue-hover:hover {
   background-color: #0091EA;
 }
+
+body {
+  font-family: Source Sans Pro, Calibri, Arial, sans-serif
+}
+
