--- a/app/assets/stylesheets/api/appointments.scss
+++ b/app/assets/stylesheets/api/appointments.scss
@@ -2,12 +2,35 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
+
 .two-rem {
     font-size: 2rem;
     color: #003073;
     margin: 20px;
 }
+.m-button{
+    height: 35px;
+    width: auto;
+    text-align: center;
+    padding:10px;
+    padding-top: 7px;
+    border: 1px solid grey;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #003073;
+    color: white;
+    margin: 10px;
+    margin-top: 30px;
+}
 
+
+// reason form
+.reason-content {
+    display: flex;
+    flex-direction: column;
+}
 .reason-list {
     width: 100%;
     display: flex;
@@ -22,9 +45,26 @@
     border: 1px solid grey;
     box-shadow: 0 4px 2px -2px gray;
 }
+.home-button-container {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;    
+}
+
+.home-button{
+    margin-top: 30px;
+}
+
+
+
 
 .margin-twenty-one {
     margin: 21px;
+}
+
+.reduce-lower-margin {
+    margin-bottom: 10px;
 }
 
 .demographic-content {
@@ -84,20 +124,7 @@
     color: white;
 }
 
-.m-button{
-    height: 35px;
-    width: auto;
-    text-align: center;
-    padding:10px;
-    padding-top: 7px;
-    border: 1px solid grey;
-    font-weight: bold;
-    font-size: 14px;
-    background-color: #003073;
-    color: white;
-    margin: 10px;
-    margin-top: 30px;
-}
+
 
 .back-button {
     margin-left: 0;
@@ -161,4 +188,21 @@
 .no-times-button {
     width: 125px;
     height: 33.82px;
+}
+
+.time-select-description{
+    padding: 12px;
+}
+
+.more-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -18px;
+    margin-bottom: -10px;
+}
+
+.second-header {
+    font-size: 1.2rem;
+    font-weight: bold;
 }
