Change Theme1.css to scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,5 @@
 @import './api/navbar.scss';
 @import './api/welcome.scss';
 @import './api/appointments.scss';
-@import './theme1.css';
+@import './theme1.scss';
 
