--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -42,5 +42,13 @@
     font-size: 36px;
     padding: 5px;
     margin: 2px;
+}
 
+.logout-button {
+    margin-left: 135px;
+    align-self: center;
+}
+
+.account-name {
+    font-weight: bold;
 }
