Add gradient to background

--- a/app/assets/stylesheets/clear.scss
+++ b/app/assets/stylesheets/clear.scss
@@ -59,6 +59,7 @@
   margin-top: 96.33px;
   width: 100%;
   background-color: #216AAB;
+  background-image: linear-gradient(#246DA7, #0B4385);
   height: 100%;
   display: flex;
   flex-direction: row;
