--- a/app/assets/stylesheets/api/appointments.scss
+++ b/app/assets/stylesheets/api/appointments.scss
@@ -44,6 +44,7 @@
     width: 453px;
     border: 1px solid grey;
     box-shadow: 0 4px 2px -2px gray;
+    padding: 10px;
 }
 .home-button-container {
     width: 100%;
