Feature comming soon modal

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -21,6 +21,7 @@
 }
 
 .nav-logo {
+    margin-right: 414px;
     height: 86.67px;
     width: 217.59px;
     background: image-url('MyHealth_Logo-01.png');
