Add Upcoming appointment modal

--- a/app/assets/stylesheets/api/welcome.scss
+++ b/app/assets/stylesheets/api/welcome.scss
@@ -1,4 +1,13 @@
 
+// upcoming appointment modal
+#upcoming-modal {
+    position: absolute;
+    z-index: -2;
+}
+
+
+
+// feature coming soon modal
 .coming-soon-modal {
     position: absolute;
     z-index: -1;
