make content-container an ID

--- a/app/assets/stylesheets/clear.scss
+++ b/app/assets/stylesheets/clear.scss
@@ -55,7 +55,7 @@
    clear: both;
  }
 
- .content-container {
+ #content-container {
   margin-top: 96.33px;
   width: 100%;
   background-color: #216AAB;
