--- a/app/assets/stylesheets/api/welcome.scss
+++ b/app/assets/stylesheets/api/welcome.scss
@@ -1,6 +1,21 @@
 
 // grey area
+#grey-area {
+    height: 100vh;
+    width: 100%;
+    opacity: 0.7;
+    position: absolute;
+    background: grey;
+    top: 0;
+}
 
+.neg-z-one {
+    z-index: -1;
+}
+
+.z-two {
+    z-index: 3;
+}
 
 // provider display
 
@@ -51,7 +66,7 @@
 }
 
 .show {
-    z-index: 2;
+    z-index: 4;
 }
 
 .upcoming-modal-title {
