--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,4 +19,5 @@
 @import './api/welcome.scss';
 @import './api/appointments.scss';
 @import './theme1.scss';
-@import './api/prescriptions.scss'
+@import './api/prescriptions.scss';
+@import './ezcal.css';
