Session form styling

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -36,7 +36,7 @@
 
 .splash-list-row {
     margin-top: 32px;
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap; 
 }
@@ -67,7 +67,7 @@
 .splash-list-text h2 {
     font-size: 1.15rem;
     font-weight: bold;
-    padding-left: 2.5px;
+    
     margin-bottom: 15px;
 }
 .splash-list-text span {
@@ -111,10 +111,12 @@
 }
 
 .error-container {
-    height: 120px;
+    height: 65px;
     width: 100%;
     display: flex;
     justify-content: center;
+    color: red;
+    margin-bottom: 15px;
 }
 
 .alert-card {
@@ -123,7 +125,7 @@
     background-repeat: no-repeat;
     height: 80%;
     width: auto;
-    margin-left: 45px; 
+    margin-left: 73px; 
 }
 
 .login-form {
@@ -197,3 +199,25 @@
 .espanol {
     padding: 7px;
 }
+
+.splash-input-label {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+}
+
+.splash-input-title {
+    position: absolute;
+    transition: top .4s, font-size .4s, top .4s;
+    font-size: 1.3rem;
+    left: 5px;
+    top: 5px;
+    color: #6B6B6B
+}
+
+.splash-input-title-selected {
+    left: 3px;
+    top: 0;
+    font-size: .8rem;
+}
+
